--- a/src/GitReader.SourceGenerator/GitReader.SourceGenerator.props
+++ b/src/GitReader.SourceGenerator/GitReader.SourceGenerator.props
@@ -4,6 +4,7 @@
         <CompilerVisibleProperty Include="GitInfo_RootDirectory" />
         <CompilerVisibleProperty Include="GitInfo_Namespace" />
         <CompilerVisibleProperty Include="GitInfo_CommitAbbreviatedLength" />
+        <CompilerVisibleProperty Include="GitInfo_UseCache" />
     </ItemGroup>
 
     <PropertyGroup>
