--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -25,6 +25,8 @@ jobs:
         run: dotnet build --no-restore --nologo --configuration Release
       - name: Test
         run: dotnet test --nologo --no-build --configuration Release
+      - name: Pack
+        run: dotnet pack --nologo --no-build --configuration Release --output nuget-packages src/GitReader.SourceGenerator/GitReader.SourceGenerator.csproj
 
   code-style:
     runs-on: ubuntu-latest
