--- a/src/GitReader.SourceGenerator/GitReader.SourceGenerator.csproj
+++ b/src/GitReader.SourceGenerator/GitReader.SourceGenerator.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>12.0</LangVersion>
     <Nullable>enable</Nullable>
     <ProjectName>GitReader.Generator</ProjectName>
