--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,15 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    groups:
+      microsoft:
+        patterns:
+          - ^Microsoft\..*
+          - ^System\..*
+      xunit:
+        patterns:
+          - ^xunit$
+          - ^xunit\..*
 
   - package-ecosystem: "github-actions"
     directory: "/" # Location of package manifests
