--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -14,10 +14,12 @@ jobs:
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
-      - name: Setup .Net 8.0.x
+      - name: Setup .Net
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: |
+            8.0.x
+            9.0.x
       - uses: actions/checkout@v4
       - name: Restore
         run: dotnet restore --nologo
@@ -34,10 +36,10 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
       - uses: actions/checkout@v4
-      - name: Setup .Net 8.0.x
+      - name: Setup .Net 9.0.x
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '9.0.x'
       - name: Retore
         run: dotnet restore --nologo
       - name: .Net Format
