--- a/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
+++ b/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
@@ -7,18 +7,25 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+    <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+  </PropertyGroup>
+
   <Import Project="..\WarningConfiguration.targets" />
 
   <ItemGroup>
-    <PackageReference Include="H.Generators.Tests.Extensions" Version="1.24.1" />
+    <PackageReference Include="GitReader" Version="1.10.0" />
+    <PackageReference Include="H.Generators.Extensions" Version="1.24.2" />
+    <PackageReference Include="H.Generators.Tests.Extensions" Version="1.24.2" />
     <PackageReference Include="Microsoft.Bcl.TimeProvider" Version="8.0.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.13.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="Verify.XUnit" Version="28.15.0" />
+    <PackageReference Include="Verify.XUnitV3" Version="28.15.0" />
     <PackageReference Include="Verify.SourceGenerators" Version="2.5.0" />
-    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.v3" Version="2.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
