Revert file changes

--- a/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
+++ b/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
@@ -57,11 +57,20 @@
     <Message Importance="High" Text="Extracting $(MSBuildProjectDirectory)/../../tag-repository.zip to the $(MSBuildProjectDirectory)/../../repository-snapshots" />
     <Message Importance="High" Text="Extracting $(MSBuildProjectDirectory)/../../no-tag-repository.zip to the $(MSBuildProjectDirectory)/../../repository-snapshots" />
 
-    <Unzip SourceFiles="$(MSBuildProjectDirectory)/../../repository-snapshots/v-tag-repository.zip" DestinationFolder="$(MSBuildProjectDirectory)/../../repository-snapshots" Condition="!Exists('$(MSBuildProjectDirectory)/../../repository-snapshots/v-tag-repository')" OverwriteReadOnlyFiles="true" />
+    <Unzip SourceFiles="$(MSBuildProjectDirectory)/../../repository-snapshots/v-tag-repository.zip"
+           DestinationFolder="$(MSBuildProjectDirectory)/../../repository-snapshots"
+           Condition="!Exists('$(MSBuildProjectDirectory)/../../repository-snapshots/v-tag-repository')"
+           OverwriteReadOnlyFiles="true" />
 
-    <Unzip SourceFiles="$(MSBuildProjectDirectory)/../../repository-snapshots/tag-repository.zip" DestinationFolder="$(MSBuildProjectDirectory)/../../repository-snapshots" Condition="!Exists('$(MSBuildProjectDirectory)/../../repository-snapshots/tag-repository')" OverwriteReadOnlyFiles="true" />
+    <Unzip SourceFiles="$(MSBuildProjectDirectory)/../../repository-snapshots/tag-repository.zip"
+           DestinationFolder="$(MSBuildProjectDirectory)/../../repository-snapshots"
+           Condition="!Exists('$(MSBuildProjectDirectory)/../../repository-snapshots/tag-repository')"
+           OverwriteReadOnlyFiles="true" />
 
-    <Unzip SourceFiles="$(MSBuildProjectDirectory)/../../repository-snapshots/no-tag-repository.zip" DestinationFolder="$(MSBuildProjectDirectory)/../../repository-snapshots" Condition="!Exists('$(MSBuildProjectDirectory)/../../repository-snapshots/no-tag-repository')" OverwriteReadOnlyFiles="true" />
+    <Unzip SourceFiles="$(MSBuildProjectDirectory)/../../repository-snapshots/no-tag-repository.zip"
+           DestinationFolder="$(MSBuildProjectDirectory)/../../repository-snapshots"
+           Condition="!Exists('$(MSBuildProjectDirectory)/../../repository-snapshots/no-tag-repository')"
+           OverwriteReadOnlyFiles="true" />
   </Target>
 
 </Project>
