--- a/src/WarningConfiguration.targets
+++ b/src/WarningConfiguration.targets
@@ -1,5 +1,9 @@
 ﻿<Project>
 
+  <PropertyGroup>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
