--- a/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
+++ b/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Microsoft.Bcl.TimeProvider" Version="10.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.1.0" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="2.0.2" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="Verify.XUnitV3" Version="31.6.0" />
     <PackageReference Include="Verify.SourceGenerators" Version="2.5.0" />
