--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -8,6 +8,11 @@ on:
       - reopened
   merge_group:
 
+permissions:
+  checks: write
+  pull-requests: write
+  contents: read
+
 jobs:
   unit-test:
     runs-on: ubuntu-latest
@@ -27,7 +32,16 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --nologo --configuration Release
       - name: Test
-        run: dotnet test --no-build --configuration Release
+        run: dotnet test --no-build --configuration Release --results-directory TestResults --report-trx
+
+      - name: 📄 Publish test results
+        uses: dorny/test-reporter@v2.1.1
+        if: always()
+        with:
+          name: 'xUnit Test Results'
+          path: 'TestResults/*.trx'
+          reporter: dotnet-trx
+
       - name: Pack
         run: dotnet pack --nologo --no-build --configuration Release --output nuget-packages src/GitReader.SourceGenerator/GitReader.SourceGenerator.csproj
 
