--- a/.github/updater.yml
+++ b/.github/updater.yml
@@ -27,3 +27,8 @@ updates:
         patterns:
           - Verify
           - Verify.*
+    ignore:
+      - dependency-name: "Microsoft.*"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "System.*"
+        update-types: ["version-update:semver-major"]
