--- a/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
+++ b/src/GitReader.SourceGenerator.Tests/GitReader.SourceGenerator.Tests.csproj
@@ -16,30 +16,22 @@
   <Import Project="..\WarningConfiguration.targets" />
 
   <ItemGroup>
-    <PackageReference Include="GitReader" Version="1.16.0" />
-    <PackageReference Include="H.Generators.Extensions" Version="1.24.2" />
-    <PackageReference Include="H.Generators.Tests.Extensions" Version="1.24.2" />
-    <PackageReference Include="Microsoft.Bcl.TimeProvider" Version="10.0.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.1.0" />
-    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="2.0.2" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="Verify.XUnitV3" Version="31.9.0" />
-    <PackageReference Include="Verify.SourceGenerators" Version="2.5.0" />
-    <PackageReference Include="xunit.v3.mtp-v2" Version="3.2.1" />
+    <PackageReference Include="GitReader" />
+    <PackageReference Include="H.Generators.Extensions" />
+    <PackageReference Include="H.Generators.Tests.Extensions" />
+    <PackageReference Include="Microsoft.Bcl.TimeProvider" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
+    <PackageReference Include="System.ComponentModel.Annotations" />
+    <PackageReference Include="Verify.XUnitV3" />
+    <PackageReference Include="Verify.SourceGenerators" />
+    <PackageReference Include="xunit.v3.mtp-v2" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="8.10.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
-    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="9.10.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net10.0' ">
-    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="10.1.0" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" />
   </ItemGroup>
 
   <ItemGroup>
