--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -41,4 +41,68 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
     <PackageVersion Include="Microsoft.Extensions.TimeProvider.Testing" Version="10.1.0" />
   </ItemGroup>
+
+  <!-- Transitive dependencies - Framework-independent -->
+  <ItemGroup>
+    <PackageVersion Include="Argon" Version="0.33.0" />
+    <PackageVersion Include="DiffEngine" Version="18.0.0" />
+    <PackageVersion Include="DiffPlex" Version="1.7.2" />
+    <PackageVersion Include="EmptyFiles" Version="8.17.1" />
+    <PackageVersion Include="Humanizer.Core" Version="2.14.1" />
+    <PackageVersion Include="Microsoft.ApplicationInsights" Version="2.23.0" />
+    <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Analyzer.Testing" Version="1.1.2" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing" Version="1.1.2" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="4.14.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.SourceGenerators.Testing" Version="1.1.2" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.14.0" />
+    <PackageVersion Include="Microsoft.DiaSymReader" Version="2.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyModel" Version="6.0.2" />
+    <PackageVersion Include="Microsoft.NETCore.Platforms" Version="1.1.0" />
+    <PackageVersion Include="Microsoft.Testing.Extensions.Telemetry" Version="2.0.2" />
+    <PackageVersion Include="Microsoft.Testing.Extensions.TrxReport.Abstractions" Version="2.0.2" />
+    <PackageVersion Include="Microsoft.Testing.Platform" Version="2.0.2" />
+    <PackageVersion Include="Microsoft.Testing.Platform.MSBuild" Version="2.0.2" />
+    <PackageVersion Include="Microsoft.VisualStudio.Composition" Version="16.1.8" />
+    <PackageVersion Include="Microsoft.VisualStudio.Composition.NetFxAttributes" Version="16.1.8" />
+    <PackageVersion Include="Microsoft.VisualStudio.Validation" Version="15.0.82" />
+    <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageVersion Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageVersion Include="NuGet.Common" Version="6.3.4" />
+    <PackageVersion Include="NuGet.Configuration" Version="6.3.4" />
+    <PackageVersion Include="NuGet.Frameworks" Version="6.3.4" />
+    <PackageVersion Include="NuGet.Packaging" Version="6.3.4" />
+    <PackageVersion Include="NuGet.Protocol" Version="6.3.4" />
+    <PackageVersion Include="NuGet.Resolver" Version="6.3.4" />
+    <PackageVersion Include="NuGet.Versioning" Version="6.3.4" />
+    <PackageVersion Include="SimpleInfoName" Version="3.1.2" />
+    <PackageVersion Include="System.Buffers" Version="4.5.1" />
+    <PackageVersion Include="System.Collections.Immutable" Version="9.0.0" />
+    <PackageVersion Include="System.ComponentModel.Composition" Version="4.5.0" />
+    <PackageVersion Include="System.Composition" Version="9.0.0" />
+    <PackageVersion Include="System.Composition.AttributedModel" Version="9.0.0" />
+    <PackageVersion Include="System.Composition.Convention" Version="9.0.0" />
+    <PackageVersion Include="System.Composition.Hosting" Version="9.0.0" />
+    <PackageVersion Include="System.Composition.Runtime" Version="9.0.0" />
+    <PackageVersion Include="System.Composition.TypedParts" Version="9.0.0" />
+    <PackageVersion Include="System.IO.Pipelines" Version="9.0.0" />
+    <PackageVersion Include="System.Memory" Version="4.5.5" />
+    <PackageVersion Include="System.Numerics.Vectors" Version="4.5.0" />
+    <PackageVersion Include="System.Reflection.Metadata" Version="9.0.0" />
+    <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
+    <PackageVersion Include="System.Security.Cryptography.Cng" Version="5.0.0" />
+    <PackageVersion Include="System.Security.Cryptography.Pkcs" Version="5.0.0" />
+    <PackageVersion Include="System.Security.Cryptography.ProtectedData" Version="4.4.0" />
+    <PackageVersion Include="System.Security.Permissions" Version="4.5.0" />
+    <PackageVersion Include="System.Text.Encoding.CodePages" Version="7.0.0" />
+    <PackageVersion Include="System.Threading.Tasks.Extensions" Version="4.6.3" />
+    <PackageVersion Include="Verify" Version="31.9.0" />
+    <PackageVersion Include="xunit.analyzers" Version="1.26.0" />
+    <PackageVersion Include="xunit.v3.assert" Version="3.2.1" />
+    <PackageVersion Include="xunit.v3.common" Version="3.2.1" />
+    <PackageVersion Include="xunit.v3.core.mtp-v2" Version="3.2.1" />
+    <PackageVersion Include="xunit.v3.extensibility.core" Version="3.2.1" />
+    <PackageVersion Include="xunit.v3.runner.common" Version="3.2.1" />
+    <PackageVersion Include="xunit.v3.runner.inproc.console" Version="3.2.1" />
+  </ItemGroup>
 </Project>
