Add NuGet.* group to dependency updater configuration

--- a/.github/updater.yml
+++ b/.github/updater.yml
@@ -30,6 +30,9 @@ updates:
         patterns:
           - Verify
           - Verify.*
+      nuget:
+        patterns:
+          - NuGet.*
     ignore:
       - dependency-name: "Microsoft.*"
         update-types: ["version-update:semver-major"]
